fix(docker): resolver violaciones del modernizer y actualizar imagen base de jib
- Reemplazar String.format() por String.formatted() en CheckoutService y PedidoServiceImpl
- Reemplazar Optional.isPresent()+get() por flatMap+ifPresent en CuentaResource
- Reemplazar Optional.get() por orElseThrow() en PedidoResource
- Actualizar imagen base de jib a eclipse-temurin:21.0.11_10-jre-ubi9-minimal